--- a/src/app/spotbie/terms/terms.component.html
+++ b/src/app/spotbie/terms/terms.component.html
@@ -1,6 +1,6 @@
 <app-scroll-to-top></app-scroll-to-top>
 
-<div class="termsWrapper">
+<div class="spotbie-overlay-window">
 
 <h1 [routerLink]="['/home']" style="text-align: right;">Home</h1>
 
