--- a/src/app/spotbie/spotbie-logged-in/business-menu/business-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-menu/business-menu.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="userType !== '4'">
 
-    <h4 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">YOUR SPOTBIE LOYALTY MENU</h4>
+    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">SPOTBIE LOYALTY MENU</h4>
 
     <p class="spotbie-text-gradient text-center mt-4">
         These are the rewards that your business will offer to the spotbie community.
@@ -21,7 +21,7 @@
                 [ngStyle]="placeToEatTileStyling(placeToEatReward)"
                 (click)="openReward(placeToEatReward)">
             <h6 *ngIf="placeToEatReward.type == '0'"> {{ placeToEatReward.name }} </h6>
-            <h6 *ngIf="placeToEatReward.type == '1'"> ${{ (placeToEatReward.point_cost * (userPointToDollarRatio / 100)) | number:'1.0':'en-US' }} </h6>
+            <h6 *ngIf="placeToEatReward.type == '1'"> ${{ (placeToEatReward.point_cost * (loyaltyPointsBalance.loyalty_point_dollar_percent_value / 100)) | number:'1.0':'en-US' }} </h6>
         </div>
     
     </div>
@@ -41,12 +41,12 @@
                 *ngFor="let placeToEatReward of placeToEatRewards"
                 [ngStyle]="placeToEatTileStyling(placeToEatReward)">
             <h6 *ngIf="placeToEatReward.type == '0'"> {{ placeToEatReward.name }} </h6>
-            <h6 *ngIf="placeToEatReward.type == '1'"> ${{ (placeToEatReward.point_cost * (userPointToDollarRatio / 100)) | number:'1.0':'en-US' }} </h6>
+            <h6 *ngIf="placeToEatReward.type == '1'"> 
+                ${{ (placeToEatReward.point_cost * (loyaltyPointsBalance.loyalty_point_dollar_percent_value / 100)) | number:'1.0':'en-US' }} 
+            </h6>
         </div>
     
     </div>
-
-
     
 </div>
 
@@ -61,6 +61,6 @@
                     (closeWindowEvt)="closeWindow()"
                     (closeThisEvt)="closeRewardCreator()"
                     [reward]="reward"
-                    [userLoyaltyPoints]="userLoyaltyPoints"
-                    [userResetBalance]="userResetBalance" 
-                    [userPointToDollarRatio]="userPointToDollarRatio"></app-reward-creator>
+                    [userLoyaltyPoints]="loyaltyPointsBalance.blanace"
+                    [userResetBalance]="loyaltyPointsBalance.reset_blanace" 
+                    [userPointToDollarRatio]="loyaltyPointsBalance.loyalty_point_dollar_percent_value"></app-reward-creator>
