--- a/src/app/spotbie/spotbie-logged-in/business-menu/reward-creator/reward-creator.component.css
+++ b/src/app/spotbie/spotbie-logged-in/business-menu/reward-creator/reward-creator.component.css
@@ -1,5 +1,4 @@
 .spotbie-overlay-window{
-    padding-top: 90px;
     padding-bottom: 100px;
     background: #332f3e;
     text-align: center;    
@@ -64,5 +63,18 @@
 }
 .sb-deleteMe .fa-trash{
     color: #a7a1a1;
-    display: block;
+    display: inline-block;
+}
+
+@media (max-width: 600px){
+    .sb-input, 
+    .spotbie-textarea, 
+    .spotbie-input-info{
+        max-width: 90%;
+        width: 90%;
+        min-width: 90%;
+    }
+    .spotbie-input-info{
+        font-size: .8rem;
+    }    
 }
