--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.css
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.css
@@ -2,3 +2,11 @@
     background-color: #000000;
     z-index: 9999;
 }
+
+@media (max-width: 460px){
+    h5{
+        font-size: 1rem;
+        padding: 20px;
+    }
+}
+
