--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -2,7 +2,11 @@
 
 <div class="spotbie-overlay-window container">
 
-  <div class="sb-login-top-padding mt-2"></div>
+  <div class="sb-closeButton" (click)="closeWindow()">
+    <i class="fa fa-times"></i>
+  </div>
+
+  <div class="sb-login-top-padding"></div>  
 
   <form [formGroup]="logInForm" (ngSubmit)="initLogIn()">
 
@@ -93,14 +97,6 @@
       LOGIN
     </button>
 
-    <p class="spotbie-rel-div
-          spotbie-padding
-          spotie-login-terms
-          spotbie-text-link"
-          (click)="openWindow(forgotPasswordWindow)">
-      BY LOGGING IN, YOU ARE AGREEING TO <a [routerLink]="['/terms']">OUR TERMS & PRIVACY POLICY.</a>
-    </p>
-
   </form>
 
   <button class="btn sb-button sb-fb-logIn-btn spotbie-padding" (click)="signInWithFB()">
@@ -116,9 +112,32 @@
       spotbie-text-link"
       (click)="signUp()">
         NOT A MEMBER? SIGN UP NOW.
+  </div>  
+
+  <div class="sb-logo mt-3 mb-3"></div>
+
+  <div class="spotbie-rel-div
+  spotbie-padding
+  spotbie-text-link"
+  *ngIf="business"
+  (click)="usersHome()">
+      CLICK HERE FOR NON-BUSINESS USERS
   </div>
 
-  <div class="sb-logo"></div>
+  <div class="spotbie-rel-div
+  spotbie-padding
+  spotbie-text-link"
+  *ngIf="!business"
+  (click)="businessHome()">
+      LOOKING FOR THE BUSINESS PORTAL?
+  </div>
+
+  <p class="spotbie-rel-div
+  spotbie-padding
+  spotie-login-terms
+  spotbie-text-link">
+    BY LOGGING IN, YOU ARE AGREEING TO <a [routerLink]="['/terms']">OUR TERMS & PRIVACY POLICY.</a>
+  </p>
 
 </div>
 
